<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<common.version>0.68</common.version>
		<flowtree.version>0.24</flowtree.version>

		<grpc.version>1.53.0</grpc.version>
		<protobuf.version>3.21.7</protobuf.version>
		<protoc.version>3.21.7</protoc.version>

		<javafx.version>21</javafx.version>
		<javafx.classifier>mac-aarch64</javafx.classifier>
	</properties>

	<groupId>com.almostrealism</groupId>
	<artifactId>rings</artifactId>
	<version>0.39</version>

	<modules>
		<module>audio</module>
		<module>pattern</module>
		<module>audio-space</module>
		<module>visual</module>
		<module>shading</module>
		<module>treeview</module>
		<module>swing</module>
		<module>visual-space</module>
		<module>absorption</module>
		<module>gl</module>
		<module>raytracer</module>
		<module>photonfield</module>
		<module>replicate</module>
		<module>rings</module>
		<module>tensorflow</module>
		<module>torch</module>
		<module>keyframing</module>
		<module>rings-ml</module>
		<module>remote</module>
		<module>remote-server</module>
	</modules>

	<!-- Output to jar format -->
	<packaging>pom</packaging>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.almostrealism</groupId>
				<artifactId>ar-treeview</artifactId>
				<version>0.39</version>
			</dependency>

			<dependency>
				<groupId>org.almostrealism</groupId>
				<artifactId>ar-algebra</artifactId>
				<version>${common.version}</version>
			</dependency>

			<dependency>
				<groupId>org.almostrealism</groupId>
				<artifactId>ar-physics</artifactId>
				<version>${common.version}</version>
			</dependency>

			<dependency>
				<groupId>org.almostrealism</groupId>
				<artifactId>ar-color</artifactId>
				<version>${common.version}</version>
			</dependency>

			<dependency>
				<groupId>org.almostrealism</groupId>
				<artifactId>ar-space</artifactId>
				<version>${common.version}</version>
			</dependency>

			<dependency>
				<groupId>org.almostrealism</groupId>
				<artifactId>ar-swing</artifactId>
				<version>${common.version}</version>
			</dependency>

			<dependency>
				<groupId>org.almostrealism</groupId>
				<artifactId>ar-utils</artifactId>
				<version>${common.version}</version>
			</dependency>

			<dependency>
				<groupId>org.almostrealism</groupId>
				<artifactId>ar-ml</artifactId>
				<version>${common.version}</version>
			</dependency>

			<dependency>
				<groupId>io.flowtree</groupId>
				<artifactId>ar-flowtree</artifactId>
				<version>${flowtree.version}</version>
			</dependency>

			<dependency>
				<groupId>io.flowtree</groupId>
				<artifactId>ar-flowtreeapi</artifactId>
				<version>${flowtree.version}</version>
			</dependency>

			<dependency>
				<groupId>io.flowtree</groupId>
				<artifactId>ar-graphpersist</artifactId>
				<version>${flowtree.version}</version>
			</dependency>

			<dependency>
				<groupId>org.joml</groupId>
				<artifactId>joml</artifactId>
				<version>1.9.9</version>
			</dependency>

			<dependency>
				<groupId>org.jogamp.gluegen</groupId>
				<artifactId>gluegen-rt-main</artifactId>
				<version>2.3.2</version>
			</dependency>

			<dependency>
				<groupId>org.jogamp.jogl</groupId>
				<artifactId>jogl-all-main</artifactId>
				<version>2.3.2</version>
			</dependency>

			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.16.1</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.16.1</version>
			</dependency>

			<dependency>
				<groupId>com.google.protobuf</groupId>
				<artifactId>protobuf-java</artifactId>
				<version>${protobuf.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.protobuf</groupId>
				<artifactId>protobuf-java-util</artifactId>
				<version>${protobuf.version}</version>
			</dependency>

			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-bom</artifactId>
				<version>${grpc.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.apache.tomcat</groupId>
				<artifactId>annotations-api</artifactId>
				<version>6.0.53</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Almost Realism Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/almostrealism/rings</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>almostrealism</id>
			<url>https://maven.pkg.github.com/almostrealism/common</url>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
	</repositories>
</project>
